# dde-workspace-crosswalk

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/common/: CMakeLists.txt  X_misc.c  category.c  config.h  display_info.c  utils.c  utils.h  xdg_misc.c  xdg_misc.h
src/dbus/: CMakeLists.txt  dbus.cfg
src/dcore/: CMakeLists.txt  dcore.c  dcore.cfg  signal.c  signal.h
src/dentry/: CMakeLists.txt  dentry.cfg  entry.c  entry.h  fileops.c  fileops_clipboard.c  fileops_error_dialog.c  fileops_error_dialog.h  fileops_error_reporting.c  fileops_trash.c  gnome-desktop-thumbnail.c  mime_actions.c
src/desktop/: CMakeLists.txt  DBUS_desktop.c  DBUS_desktop.h  desktop.c  desktop.cfg  desktop_utils.c  entry.h  inotify_item.c  inotify_item.h
src/dock/: CMakeLists.txt  DBUS_dock.c  DBUS_dock.h  dock.c  dock.cfg  dock.h  dock_config.c  dock_hide.c  draw.c  handle_icon.c  migration.c  monitor.c  region.c  switcher.c
src/launcher/: CMakeLists.txt  DBUS_launcher.c  DBUS_launcher.h  launcher.c  launcher.h
tools/: binding_generator.py  dbus_custom_bindings.py  dcore_custom_bindings.py  module_c_template.c  module_js_template.js
